syntax="proto3";

package answer_sheet;

option go_package="./answersheetpb";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";




message Test {
  int64  id = 11;
  string name = 1;
  int32 time_to_do = 2;
  google.protobuf.Timestamp time_start = 3;
  google.protobuf.Timestamp time_end = 4;
  bool  do_once = 5;
  string password = 6;
  uint32 prevent_cheat = 7;
  bool is_authenticate_user = 8;
  uint32 show_mark = 9;
  uint32 show_answer = 10;
  int64 created_by = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message StartDoTestRequest {
  int64 test_id = 1;
  string version = 2;
}

message StartDoTestResponse {
  string message = 1;
}

message CheckUserDoingTestRequest {
  int64 user_id = 1;
  int64 test_id = 2;
}

message CheckUserDoingTestResponse {
  bool check = 1;
  string message = 2;
}

message UserAnswerRequest {
  int64 test_id = 1;
  int64 question_id = 2;
  string answer = 3;
  string previous_answer = 4;
}

message UserAnswerResponse {
  string message = 1;
}

message GetTestContentRequest {
  int64 testId = 1;
}

message GetTestContentResponse {
  string message = 1;
  TestContent data = 2;
}

message TestMultipleChoiceAnswer {
  int64 id = 1;
  int64  test_multiple_choice_id = 2;
  float score = 3;
  int32 type = 4;
}

message TestMultipleChoice {
  int64 id = 1;
  string file_path = 2;
  float score = 3;
  repeated TestMultipleChoiceAnswer answers = 4;
}

message TestContent {
  int64 id = 1;
  int64  test_id = 2;
  int64 typeable_id = 3;
  int64  typeable = 4;
  TestMultipleChoice multiple_choice = 5;
  google.protobuf.Duration time_left = 6;

}

message GetLatestStartTimeRequest {
  int64 test_id = 1;
  int64 user_id = 2;
}

message GetLatestStartTimeResponse {
  string message = 1;
  google.protobuf.Timestamp data = 2;
}


message GetCurrentTestRequest {
  int64 user_id = 1;
  int64 test_id = 2;
}


message Answer {
  int64 question_id = 1;
  string answer = 2;
}

message GetCurrentTestResponse {
  string message = 1;
  repeated Answer data = 2;
}

message SubmitTestRequest {
  int64 user_id = 1;
  int64 test_id = 2;
}

message SubmitTestResponse {
  string message = 1;
}


service AnswerSheetService {
  rpc StartDoTest(StartDoTestRequest) returns(StartDoTestResponse) {
    option(google.api.http) = {
      post: "/api/{version}/answersheets/start",
      body: "*"
    };
  }
  rpc CheckUserDoingTest(CheckUserDoingTestRequest) returns(CheckUserDoingTestResponse) {
    option(google.api.http) = {
      get: "/api/v1/answersheets/test/{test_id}/check-doing"
    };
  }
  rpc UserAnswer(UserAnswerRequest) returns(UserAnswerResponse) {
    option(google.api.http) = {
      post: "/api/v1/answersheets/answer",
      body: "*"
    };
  }
  rpc GetTestContent(GetTestContentRequest) returns(GetTestContentResponse){
    option(google.api.http) = {
      get: "/api/v1/answersheets/test/{testId}/content",
    };
  }
  rpc GetLatestStartTime(GetLatestStartTimeRequest) returns(GetLatestStartTimeResponse);
  rpc GetCurrentTest(GetCurrentTestRequest) returns(GetCurrentTestResponse) {
    option(google.api.http) = {
      get: "/api/v1/answersheets/test/{test_id}/assignment"
    };
  }
  rpc SubmitTest(SubmitTestRequest) returns(SubmitTestResponse) {
    option(google.api.http) = {
      post: "/api/v1/answersheets/submit",
      body: "*"
    };
  }

}